# books-management-cpp-training

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
class/: books.cpp  books.hpp
database/: seeders.cpp
database/sql/: book_management_create.sql  insert_query.sql
include/: database_example.h  date.hpp
lib/admin/: admin.cpp  admin.hpp
lib/books/: books.cpp
lib/employees/: employees.hpp
lib/members/: members.cpp  members.hpp
lib/purchases/: purchases.hpp
lib/sales/: sales.cpp  sales.hpp
lib/suppliers/: suppliers.cpp
sql/: book_management_create.sql  insert_query.sql  select_query.sql
src/: books.cpp  books.hpp  dateStruct.hpp  employees.hpp  main.cpp  purchases.cpp  purchases.hpp  suppliers.cpp  suppliers.hpp
src/class/admin/: admin.cpp  admin.hpp
src/class/books/: books.cpp  books.hpp
src/class/database_seeders/: database_seeders.cpp  database_seeders.hpp
src/class/employees/: employees.cpp  employees.hpp
src/class/members/: members.cpp  members.hpp
src/class/purchases/: purchases.cpp  purchases.hpp
src/class/sales/: sales.cpp  sales.hpp
src/class/suppliers/: suppliers.cpp  suppliers.hpp
src/database/: seeders.cpp
src/database/database_seeders/: database_seeders.cpp  database_seeders.hpp
